Agregado soporte para active storage

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -10,5 +10,9 @@
   <%= @country.code %>
 </p>
 
+<p><strong>Code:</strong>
+  <%= image_tag @country.image %>
+</p>
+
 <%= link_to 'Edit', edit_country_path(@country) %> |
 <%= link_to 'Back', countries_path %>
