--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -20,7 +20,9 @@
     <%= form.label :code %>
     <%= form.text_field :code %>
   </div>
-
+  <div class="field">
+    <%= form.file_field :image %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
