--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,2 +1,70 @@
-<h1>Page#index</h1>
-<p>Find me in app/views/page/index.html.erb</p>
+
+<h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+</div>
+<!-- Content Row -->
+<div class="row">
+<!-- Earnings (Monthly) Card Example -->
+<div class="col-xl-4 col-md-6 mb-4">
+    <div class="card border-left-primary shadow h-100 py-2">
+    <div class="card-body">
+        <div class="row no-gutters align-items-center">
+        <div class="col mr-2">
+            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Asistentes Registrados</div>
+            <div class="h5 mb-0 font-weight-bold text-gray-800">80</div>
+        </div>
+        <div class="col-auto">
+            <i class="fa fa-users fa-2x text-gray-300"></i>
+        </div>
+        </div>
+    </div>
+    </div>
+</div>
+<!-- Earnings (Monthly) Card Example -->
+<div class="col-xl-4 col-md-6 mb-4">
+    <div class="card border-left-success shadow h-100 py-2">
+    <div class="card-body">
+        <div class="row no-gutters align-items-center">
+        <div class="col mr-2">
+            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Instalaciones</div>
+            <div class="h5 mb-0 font-weight-bold text-gray-800">30</div>
+        </div>
+        <div class="col-auto">
+            <i class="fa fa-linux fa-2x text-gray-300"></i>
+        </div>
+        </div>
+    </div>
+    </div>
+</div>
+<div class="col-xl-4 col-md-6 mb-4">
+    <div class="card border-left-success shadow h-100 py-2">
+    <div class="card-body">
+        <div class="row no-gutters align-items-center">
+        <div class="col mr-2">
+            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Colaboradores</div>
+            <div class="h5 mb-0 font-weight-bold text-gray-800">10</div>
+        </div>
+        <div class="col-auto">
+            <i class="fa fa-linux fa-2x text-gray-300"></i>
+        </div>
+        </div>
+    </div>
+    </div>
+</div>
+</div>
+<!-- Content Row -->
+<div class="row">
+<!-- Area Chart -->
+<div class="col-xl-12 col-lg-12">
+    <div class="card shadow mb-4">
+    <!-- Card Header - Dropdown -->
+    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+        <h6 class="m-0 font-weight-bold text-primary">Información</h6>
+    </div>
+    <!-- Card Body -->
+    <div class="card-body">
+        <div class="chart-area">
+        <canvas id="installation_chart"></canvas>
+        </div>
+    </div>
+    </div>
+</div>
